--- a/employee_mgmt_system_proj/emp_app/templates/index.html
+++ b/employee_mgmt_system_proj/emp_app/templates/index.html
@@ -8,16 +8,28 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Office Employee Management System!</title>
+    <title style="background-color:powderblue;">Office Employee Management System!</title>
   </head>
+  <style>
+  body{
+    background-image: url('https://img.freepik.com/free-vector/office-background-video-conferencing_23-2148638212.jpg?w=1060&t=st=1667933352~exp=1667933952~hmac=bacfbb71310d78d2be636d97cc9c411ed6eb3ffef8f0c739700a632b50175f8b');
+    background-size: cover;
+
+
+
+    height: 100vh;
+    padding:0;
+    margin:0;
+}
+  </style>
   <body>
   <div class="container">
-          <h1>Office Employee Management System!</h1>
+          <h1 style="color:blue;font-family:verdana;"><b>Employee Management System</b></h1>
       <hr>
-      <a class="btn btn-primary" href="/all_emp" role="button">View All Employee</a>
-      <a class="btn btn-primary" href="/add_emp" role="button">Add An Employee</a>
-      <a class="btn btn-primary" href="/remove_emp" role="button">Remove An Employee</a>
-      <a class="btn btn-primary" href="/filter_emp" role="button">Filter Employee Details</a>
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/all_emp" role="button" style="font-size: 40px" >View All Employee</a></div>
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/add_emp" role="button" style="font-size: 40px" >Add An Employee</a></div>
+      <div style="margin-top: 80px;font-size: 60px" ><a class="btn btn-primary" href="/remove_emp" role="button" style="font-size: 40px" >Remove An Employee</a></div>
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/filter_emp" role="button" style="font-size: 40px" >Filter Employee Details</a></div>
 
 
   </div>
