Added Singleton and Raw SQL
Co-Authored-By: Divyaa268 <117614772+Divyaa268@users.noreply.github.com>

--- a/employee_mgmt_system_proj/emp_app/templates/index.html
+++ b/employee_mgmt_system_proj/emp_app/templates/index.html
@@ -27,7 +27,9 @@
       <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/add_emp" role="button" style="font-size: 40px" >Add An Employee</a></div>
       <div style="margin-top: 80px;font-size: 60px" ><a class="btn btn-primary" href="/remove_emp" role="button" style="font-size: 40px" >Remove An Employee</a></div>
       <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/filter_emp" role="button" style="font-size: 40px" >Filter Employee Details</a></div>
-
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/manager_of_company" role="button" style="font-size: 40px" >View Only Manager Details</a></div>
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/regular_employee" role="button" style="font-size: 40px" >View Only Regular Employee Details</a></div>
+      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/ceo_details" role="button" style="font-size: 40px" >View CEO Details</a></div>
 
   </div>
 
