--- a/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
+++ b/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
@@ -2,33 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Filter Employee</title>
+    <title>Managers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
   <body>
-  <div class="container">
-          <h1>Filter Employee Details!</h1>
-      <hr>
-      <form action="/filter_emp" method="post">
-    {% csrf_token %}
-    <label for="name">Employee First/Last Name</label><br>
-    <input type="text" id="name" name="name" value="{{ name }}"><br>
-    <label for="dept">Department</label><br>
-    <input type="text" id="dept" name="dept" value="{{ dept }}"><br>
-    <label for="role">Role</label><br>
-    <input type="text" id="role" name="role" value="{{ role }}"><br>
-    <hr>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+
+    <!-- ----------------------------------------------------------- -->
+    <div>
+         <table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">EMP_ID</th>
+      <th scope="col">FULL NAME</th>
+      <th scope="col">Phone Number </th>
+    </tr>
+  </thead>
+  {% for obj in query %}
+    <tbody>
+    <tr>
+     <td>{{obj.0}}</td>
+     <td>{{obj.1}}</td>
+        <td>{{obj.2}}</td>
+    </tr>
+    </tbody>
+     {% endfor %}
+    </table>
+     </div>
 
 
-  </div>
 
-<!--  <div>-->
-<!--      {% for obj in query %}-->
-<!--        <p>{{obj.0}}</p>-->
-<!--    {% endfor %}-->
-<!--  </div>-->
+
+     <!--------------------------------------------------------------------- -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
