--- a/employee_mgmt_system_proj/emp_app/templates/index.html
+++ b/employee_mgmt_system_proj/emp_app/templates/index.html
@@ -12,24 +12,23 @@
   </head>
   <style>
   body{
-    background-image: url('https://img.freepik.com/free-vector/office-background-video-conferencing_23-2148638212.jpg?w=1060&t=st=1667933352~exp=1667933952~hmac=bacfbb71310d78d2be636d97cc9c411ed6eb3ffef8f0c739700a632b50175f8b');
-    background-size: cover;
-    height: 100vh;
-    padding:0;
-    margin:0;
+background-image:url('https://images2.alphacoders.com/118/1185587.jpg');
+background-repeat:no-repeat;
+background-size:100%;
 }
   </style>
   <body>
   <div class="container">
-          <h1 style="color:blue;font-family:verdana;"><b>Employee Management System</b></h1>
+          <h1 style="color:blue;font-family:verdana;margin-left: 310px;"><b>Employee Management System</b></h1>
       <hr>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/all_emp" role="button" style="font-size: 40px" >View All Employee</a></div>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/add_emp" role="button" style="font-size: 40px" >Add An Employee</a></div>
-      <div style="margin-top: 80px;font-size: 60px" ><a class="btn btn-primary" href="/remove_emp" role="button" style="font-size: 40px" >Remove An Employee</a></div>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/filter_emp" role="button" style="font-size: 40px" >Filter Employee Details</a></div>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/manager_of_company" role="button" style="font-size: 40px" >View Only Manager Details</a></div>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/regular_employee" role="button" style="font-size: 40px" >View Only Regular Employee Details</a></div>
-      <div style="margin-top: 80px;font-size: 60px"><a class="btn btn-primary" href="/ceo_details" role="button" style="font-size: 40px" >View CEO Details</a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px;"><a class="btn btn-outline-primary" href="/all_emp" role="button" style="font-size: 30px;color: black;" ><b>View All Employee</b></b></a></div>
+       <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px;"><a class="btn btn-outline-primary" href="/add_emp" role="button" style="font-size: 30px;color: black;" ><b>Add An Employee</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px;" ><a class="btn btn-outline-primary" href="/remove_emp" role="button" style="font-size: 30px;color: black;"><b>Remove An Employee</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px;"><a class="btn btn-outline-primary" href="/filter_emp" role="button" style="font-size: 30px;color: black;" ><b>Filter Employee Details</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;;margin-left: 60px;margin-right: 140px;"><a class="btn btn-outline-primary" href="/manager_of_company" role="button" style="font-size: 30px;color: black;"><b>View Manager Details</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px"><a class="btn btn-outline-primary" href="/regular_employee" role="button" style="font-size: 30px;color: black;" ><b>View Regular Employee Details</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px"><a class="btn btn-outline-primary" href="/best_performers" role="button" style="font-size: 30px;color: black;" ><b>Best Performers</b></a></div>
+      <div style="margin-top: 30px;font-size: 20px;margin-left: 60px;margin-right: 140px"><a class="btn btn-outline-primary" href="/ceo_details" role="button" style="font-size: 30px;color: black;" ><b>View CEO Details</b></a></div>
 
   </div>
 
