--- a/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
+++ b/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
@@ -8,7 +8,7 @@
 </head>
   <style>
   body{
-    background-image: url('https://previews.123rf.com/images/teamplayfor/teamplayfor1904/teamplayfor190400024/127495270-vector-image-cartoon-characters-office-workers-in-victory-people-in-business-suits-jump-from-happine.jpg');
+    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/5e3ed2111156789.5ffcc4f3ab6ae.jpg');
     background-size: cover;
     height: 100vh;
     padding:0;
