--- a/employee_mgmt_system_proj/emp_app/templates/add_emp.html
+++ b/employee_mgmt_system_proj/emp_app/templates/add_emp.html
@@ -5,9 +5,18 @@
     <title>New Employee Form </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
+<style>
+  body{
+background-image:url('https://images7.alphacoders.com/872/872886.jpg');
+background-repeat:no-repeat;
+background-size:100%;
+}
+  </style>
+
   <body>
   <div class="container">
-          <h1>From to Add New Employee in Records.</h1>
+          <h1>Form to Add New Employee in Records.</h1>
       <hr>
 
 <form action="/add_emp" method="post">
