--- a/employee_mgmt_system_proj/emp_app/templates/filter_emp.html
+++ b/employee_mgmt_system_proj/emp_app/templates/filter_emp.html
@@ -5,6 +5,16 @@
     <title>Filter Employee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
+<style>
+  body{
+background-image:url('https://wallpapers.com/images/hd/the-office-us-cast-stockroom-6wsd0rwh8ycq21vv.jpg');
+background-size: cover;
+<!--background-repeat:no-repeat;-->
+background-size:100%;
+}
+  </style>
+
   <body>
   <div class="container">
           <h1>Filter Employee Details!</h1>
