--- a/employee_mgmt_system_proj/emp_app/templates/remove_emp.html
+++ b/employee_mgmt_system_proj/emp_app/templates/remove_emp.html
@@ -5,6 +5,15 @@
     <title>Remove Employee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
+<style>
+  body{
+background-image:url('https://mcdn.wallpapersafari.com/medium/22/19/zKU6uj.jpg');
+background-repeat:no-repeat;
+background-size:100%;
+}
+  </style>
+
   <body>
   <div class="container">
           <h1>Remove An Employee!</h1>
