--- a/employee_mgmt_system_proj/emp_app/templates/view_all_emp.html
+++ b/employee_mgmt_system_proj/emp_app/templates/view_all_emp.html
@@ -8,12 +8,13 @@
 </head>
   <style>
   body{
-    background-image: url('https://previews.123rf.com/images/teamplayfor/teamplayfor1904/teamplayfor190400024/127495270-vector-image-cartoon-characters-office-workers-in-victory-people-in-business-suits-jump-from-happine.jpg');
+    background-image: url('https://wallpapers.com/images/hd/the-office-us-cartoon-cast-eab959o1ckvsqxpc.jpg');
     background-size: cover;
     height: 100vh;
     padding:0;
     margin:0;
 }
+<!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOVBPsWOEaJ4_G8TncplBPggiWHCDMIMDILok1DTBu0rCclHPrUnibPvy2s0h58G5Zkfk&usqp=CAU-->
   </style>
   <body>
   <div class="container">
