Added Data in the Tables
Co-Authored-By: sohammukher <37874706+sohammukher@users.noreply.github.com>

--- a/employee_mgmt_system_proj/emp_app/templates/manager_of_company.html
+++ b/employee_mgmt_system_proj/emp_app/templates/manager_of_company.html
@@ -7,15 +7,19 @@
 </head>
 <style>
   body{
-background-image:url('https://images8.alphacoders.com/420/420119.jpg');
+background-image:url('https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/5e3ed2111156789.5ffcc4f3ab6ae.jpg');
 background-repeat:no-repeat;
 background-size:100%;
 }
+
+<!--https://images8.alphacoders.com/420/420119.jpg-->
 </style>
 
   <body>
 
     <!-- ----------------------------------------------------------- -->
+      <div class="container">
+ <h1> Manager Details</h1>
     <div>
          <table class="table table-dark">
   <thead>
@@ -36,7 +40,7 @@ background-size:100%;
      {% endfor %}
     </table>
      </div>
-
+      </div>
 
 
 
