--- a/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
+++ b/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
@@ -17,6 +17,8 @@ background-size:100%;
   <body>
 
     <!-- ----------------------------------------------------------- -->
+     <div class="container">
+         <h1>CEO Details</h1>
     <div>
          <table class="table table-dark">
   <thead>
@@ -36,6 +38,7 @@ background-size:100%;
     </tbody>
      {% endfor %}
     </table>
+     </div>
      </div>
 
 
