--- a/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
+++ b/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
@@ -16,44 +16,26 @@
 }
   </style>
   <body>
-  <div class="container">
-          <h1><b>All Employee Details</b></h1>
-      <hr>
-     <table class="table table-dark">
+     <div>
+         <table class="table table-dark">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Salary</th>
-      <th scope="col">Bonus</th>
-      <th scope="col">Phone Number</th>
-      <th scope="col">Role</th>
-      <th scope="col">Department</th>
-      <th scope="col">Location</th>
-      <th scope="col">Hiredate</th>
+      <th scope="col">Last Name </th>
+      <th scope="col">Phone Number </th>
     </tr>
   </thead>
-         {% for emp in emps %}
-  <tbody>
+  {% for obj in query %}
+    <tbody>
     <tr>
-      <th scope="row">{{emp.id}}</th>
-      <td>{{emp.first_name}}</td>
-      <td>{{emp.last_name}}</td>
-      <td>{{emp.salary}}</td>
-      <td>{{emp.bonus}}</td>
-      <td>{{emp.phone}}</td>
-      <td>{{emp.role.name}}</td>
-      <td>{{emp.dept.name}}</td>
-      <td>{{emp.dept.location}}</td>
-      <td>{{emp.hire_date}}</td>
+     <td>{{obj.0}}</td>
+     <td>{{obj.1}}</td>
+        <td>{{obj.2}}</td>
     </tr>
-  </tbody>
-         {% endfor %}
-</table>
-
-  </div>
-
+    </tbody>
+     {% endfor %}
+    </table>
+     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
