--- a/employee_mgmt_system_proj/emp_app/templates/best_performers.html
+++ b/employee_mgmt_system_proj/emp_app/templates/best_performers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Managers</title>
+    <title>Best Performers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -17,6 +17,8 @@ background-size:100%;
   <body>
 
     <!-- ----------------------------------------------------------- -->
+    <div class="container">
+         <h1 style="color:white;">Best Performers Details</h1>
     <div>
          <table class="table table-dark">
   <thead>
@@ -39,7 +41,7 @@ background-size:100%;
      {% endfor %}
     </table>
      </div>
-
+    </div>
 
 
 
