--- a/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
+++ b/employee_mgmt_system_proj/emp_app/templates/ceo_details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Managers</title>
+    <title>CEO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -23,7 +23,7 @@ background-size:100%;
          <table class="table table-dark">
   <thead>
     <tr>
-      <th scope="col">EMP_ID</th>
+      <th scope="col">EMP ID</th>
       <th scope="col">FULL NAME</th>
       <th scope="col">Phone Number </th>
     </tr>
