--- a/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
+++ b/employee_mgmt_system_proj/emp_app/templates/regular_employee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>View All Employee</title>
+    <title>Regular Employees</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
@@ -16,6 +16,8 @@
 }
   </style>
   <body>
+  <div class="container">
+         <h1>Regular Employee Details</h1>
      <div>
          <table class="table table-dark">
   <thead>
@@ -36,6 +38,7 @@
      {% endfor %}
     </table>
      </div>
+  </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
