Added Complex SQL Join Query
Co-Authored-By: sohammukher <37874706+sohammukher@users.noreply.github.com>

--- a/employee_mgmt_system_proj/emp_app/templates/view_all_emp.html
+++ b/employee_mgmt_system_proj/emp_app/templates/view_all_emp.html
@@ -38,16 +38,16 @@
          {% for emp in emps %}
   <tbody>
     <tr>
-      <th scope="row">{{emp.id}}</th>
-      <td>{{emp.first_name}}</td>
-      <td>{{emp.last_name}}</td>
-      <td>{{emp.salary}}</td>
-      <td>{{emp.bonus}}</td>
-      <td>{{emp.phone}}</td>
-      <td>{{emp.role.name}}</td>
-      <td>{{emp.dept.name}}</td>
-      <td>{{emp.dept.location}}</td>
-      <td>{{emp.hire_date}}</td>
+      <th scope="row">{{emp.0}}</th>
+      <td>{{emp.1}}</td>
+      <td>{{emp.2}}</td>
+      <td>{{emp.3}}</td>
+      <td>{{emp.4}}</td>
+      <td>{{emp.5}}</td>
+      <td>{{emp.6}}</td>
+      <td>{{emp.7}}</td>
+      <td>{{emp.8}}</td>
+      <td>{{emp.9}}</td>
     </tr>
   </tbody>
          {% endfor %}
